--- a/assignment1.html
+++ b/assignment1.html
@@ -1,14 +1,12 @@
-<!-- 
-  Assignment #1 - Terry Tan
--->
+<!-- Assignment #1 - Terry Tan -->
 
 <!doctype html>
-<html lang= "en">
+<html lang = "en">
   <head>
-    <meta charset= "UTF-8">
+    <meta charset = "UTF-8">
     <title>Assignment 1</title>
   </head>
-  
+
   <body>
     <h1>Terry Tan</h1>
     <ul>
